# nascast

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: base.html  cache.rs  index.html  main.rs  media-index.html  media.css  media.html  media.rs  movie.html  movie.rs  movies.html  search.rs  series.html  tv.html  tv.rs
static/: media.js  search.js
