[package]
name = "nascast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = {version = "0.11.16", features = ["json", "default-tls", "gzip", "deflate", "blocking"]}
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.95"
tera = "1.18.1"
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"
walkdir = "2.3.2"
